cmake_minimum_required(VERSION 2.8.5)
project(mir)

add_subdirectory(third-party/bullet)
add_subdirectory(third-party/sqlite3)
add_subdirectory(third-party/freeglut)
add_subdirectory(third-party/glew)

set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(OpenGL REQUIRED)
find_package(Boost COMPONENTS system REQUIRED)
link_directories(
    ${Boost_LIBRARY_DIRS}
)
include_directories(
    ${Boost_INCLUDE_DIRS}
    ${freeglut_SOURCE_DIR}
    ${glew_SOURCE_DIR}
    ${GLFW_SOURCE_DIR}/include
    ${png_SOURCE_DIR}
    ${z_SOURCE_DIR}
)
add_library(mir-network STATIC
    Network/Message.h
    Network/Message.cpp
    Network/Controller.h
    Network/Controller.cpp
    Network/IdentifiableObject.h
    Network/IdentifiableObject.cpp
    Network/SpatialObject.h
    Network/SpatialObject.cpp
    Network/Internal/tcp_server_connection.h
    Network/Internal/tcp_server_connection.cpp
    Network/Internal/tcp_server.h
    Network/Internal/tcp_server.cpp
    Network/Internal/tcp_client_connection.h
    Network/Internal/tcp_client_connection.cpp
    Network/Internal/tcp_client.h
    Network/Internal/tcp_client.cpp
    Network/CreateMessage.h
    Network/CreateMessage.cpp
    Network/ObjectTranslation.h
    Network/PlayerJoinMessage.h
    Network/PlayerJoinMessage.cpp
    Network/RequestMessage.h
    Network/RequestMessage.cpp
    Network/NotFoundMessage.h
    Network/NotFoundMessage.cpp
    Network/RepositionMessage.h
    Network/RepositionMessage.cpp
    Network/ObjectMessage.h
    Network/ObjectMessage.cpp
    Network/Source.h
    Network/Source.cpp
)
add_executable(mir
    Main.cpp
    Engine.h
    Engine.cpp
    CachedUniverse.h
    CachedUniverse.cpp
    CachedActor.h
    CachedActor.cpp
    CachedPlayer.h
    CachedPlayer.cpp
    CachedShip.h
    CachedShip.cpp
    ClientObjectTranslation.h
    ClientObjectTranslation.cpp
    BaseState.h
    GameplayState.h
    GameplayState.cpp
    GameplayRenderingEngine.h
    GameplayRenderingEngine.cpp
    MainMenuState.h
    MainMenuState.cpp
)
add_executable(mir-server
    Server/Main.cpp
    Server/Universe.h
    Server/Universe.cpp
    Server/Actor.h
    Server/Actor.cpp
    Server/Player.h
    Server/Player.cpp
    Server/Ship.h
    Server/Ship.cpp
    Server/ServerObjectTranslation.h
    Server/ServerObjectTranslation.cpp
)
target_link_libraries(mir-network
    ${Boost_LIBRARIES}
)
target_link_libraries(mir
    mir-network
    png
    z
    glfw
    ${freeglut_LIBRARY}
    ${glew_LIBRARY}
    ${GLFW_LIBRARIES}
    ${OPENGL_LIBRARIES}
    ${Boost_LIBRARIES}
)
target_link_libraries(mir-server
    mir-network
    ${Boost_LIBRARIES}
)
if(MSVC)
    add_definitions(-D_WIN32_WINNT=0x0501)
endif()
cotire(mir-network)
cotire(mir)
cotire(mir-server)
